--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
   <body>
     <h1>Projektas</h1>
+    <!-- ! hahshs -->
+    <!-- ? hahahs -->
+    <!-- * hahahs -->
   </body>
 </html>
